# autogen-api-style-agent

./: .env.example  .gitignore  .prettierignore  CLAUDE.md  CODEOWNERS  Dockerfile  Makefile  README.md  STATUS.md  docker-compose.yml  eslint.config.js  mcp.config.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm.config.yaml  pyproject.toml  setup.sh  tools-manifest.md  vercel.json  vitest.config.ts
.capy/: BUILD.md  CAPTAIN.md  REVIEW.md  settings.json
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature.md
.github/workflows/: auto-merge.yml  ci.yml  dependabot-auto-merge.yml  dependency-update.yml  deploy.yml  event-bus-ci.yml  pr-labeler.yml  preview-deploy.yml  production-deploy.yml  sovereign-ota.yml
.trae/: mcp_settings.json
.trae/agents/: code-reviewer.json  full-team.json  orchestrator.json  researcher.json
configs/: .env.example  trae-mcp-install.json
docs/: api.md  deploy-checklist.md  nanoclaw-bot.md  pre-merge-checklist.md  release-notes-template.md
docs/agent-prompts/: README.md  architect.md  builder.md  shipper.md  verifier.md
docs/sovereign-blueprint/: 00-overview.md  01-perplexity-comet-analysis.md  02-component-survey.md  03-architecture.md  04-repo-structure.md  05-roadmap.md  06-free-models-config.md  07-security-threat-model.md  README.md
examples/: 01_quick_chat.py  02_productivity_team.py  03_code_review.py  04_research_team.py  05_session_continuity.py  06_provider_fallback.py  README.md
scripts/: bootstrap.ps1  bootstrap.sh  check-coverage.sh  init-db.js  post-deploy-verify.sh  regression-check.sh  rollback.sh  setup_trae.py  smoke-test.sh
skills/: README.md  bug-triage.md  ci-repair.md  post-deploy-verify.md  pr-hardening.md  release-ship.md  repo-bootstrap.md
skills/bug-triage/: SKILL.md
skills/ci-repair/: SKILL.md
skills/post-deploy-verify/: SKILL.md
skills/pr-hardening/: SKILL.md
skills/release-ship/: SKILL.md
skills/repo-bootstrap/: SKILL.md
sovereign-intelligence-os/: .env.example  .gitignore  README.md  SECURITY.md  install-termux-phase1.sh  pyproject.toml  requirements.txt
sovereign-intelligence-os/configs/: identity.example.md  litellm_config.yaml  mcp_servers.json
sovereign-intelligence-os/docs/: architecture.md  fold7-setup.md  security-considerations.md
sovereign-intelligence-os/kivy-apk/: README.md  buildozer.spec  main.py  requirements.txt
sovereign-intelligence-os/orchestrator/: __init__.py  __main__.py  browser_bridge.js  config.py  cv_bridge.py  identity.py  main.py  mcp_bridge.py  memory.py  router.py
sovereign-intelligence-os/scripts/: identity-init.sh  launch-os.sh  post-install.sh
sovereign-intelligence-os/tasker/: README.md  power-button.sh  sovereign-trigger.tsk.xml
sovereign-intelligence-os/tests/: conftest.py  test_identity.py  test_main.py  test_mcp_bridge.py  test_memory.py  test_router.py
src/: app.css  app.d.ts  hooks.server.ts
src/autogen_api_agent/: __init__.py  cli.py  config.py  mcp_server.py  models.py  openapi_spec.py  server.py  session.py  utils.py  webhooks.py
src/autogen_api_agent/agents/: __init__.py  architect.py  base.py  coder.py  devops.py  orchestrator.py  researcher.py  reviewer.py  tester.py  writer.py
src/autogen_api_agent/providers/: __init__.py  factory.py  google_provider.py  kimi_provider.py  mistral_provider.py  openai_provider.py  openrouter_provider.py  swiss_public_ai.py  together_provider.py
src/autogen_api_agent/teams/: __init__.py  code_review.py  productivity.py  quick.py  research.py
src/autogen_api_agent/tools/: __init__.py  code_analysis.py  file_ops.py  github_tools.py  shell_exec.py  web_search.py
src/autogen_api_style_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/lib/components/apps/: ChatApp.svelte  DashboardApp.svelte  FilesApp.svelte  GitHubApp.svelte  KnowledgeApp.svelte  SearchApp.svelte  SettingsApp.svelte  TerminalApp.svelte
src/lib/components/chat/: ChatInput.svelte  (+5 more)
src/lib/server/: files.ts  github-context.ts  rag.ts  rate-limit.ts  tools.ts  validate-chat.ts
src/lib/stores/: apikeys.svelte.ts  apps.svelte.ts  chat.svelte.ts  commandpalette.svelte.ts  contextmenu.svelte.ts  desktop.svelte.ts  integrations.svelte.ts  mcp.svelte.ts  memory.svelte.ts  notifications.svelte.ts  settings.svelte.ts  theme.svelte.ts  windows.svelte.ts
src/lib/supabase/: client.ts  server.ts
src/lib/types/: index.ts
src/nanoclaw_bot/: __init__.py  __main__.py  agents.py  bot.py  config.py  eliza.py  logging_config.py  security.py
src/nanoclaw_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/nanoclaw_bot/handlers/: __init__.py  agents.py  backup.py  configure.py  eliza.py  help.py  keyboard.py  keys.py  logs.py  notify.py  shell.py  start.py  status.py  update.py
src/routes/: +layout.svelte  +page.svelte
src/routes/config/: +page.svelte
src/routes/login/: +page.svelte
supabase/migrations/: 001_initial_schema.sql  002_integrations.sql
tests/: __init__.py  conftest.py  test_agents.py  test_backup.py  test_config.py  test_handlers.py  test_keyboard.py  test_logs.py  test_mcp_server.py  test_models.py  test_nanoclaw_agents.py  test_notify.py  test_providers.py  test_security.py  test_server.py  test_session.py  test_shell.py  test_teams.py  test_tools.py  test_update.py  test_utils.py  test_webhooks.py
(+24 files in other folders)
